feat(ai): Spring Retry 도입 및 OpenAiClient 리팩토링을 통한 안정성 강화
OpenAI API 호출 시 일시적인 오류에 대응하고, 코드 구조를 개선하기 위해 Spring Retry를 도입하고 AI 관련 서비스 계층을 리팩토링합니다.

## 상세 설명

### 문제점 (AS-IS)

1.  **외부 API 취약성**: 기존 코드는 OpenAI API 호출 시 네트워크 오류나 서버의 일시적인 5xx 에러가 발생하면, 재시도 로직 없이 즉시 작업을 `FAILED` 처리했습니다. 이로 인해 사소한 문제에도 작업 전체가 실패하는 등 시스템이 매우 취약했습니다.
2.  **내부 호출 문제**: `AIService` 내에서 `@Retryable`을 적용하려 할 때, `executeStrategy` 메서드가 같은 클래스의 `getFinalSummary` 메서드를 호출하는 **내부 호출(Self-invocation)**이 발생합니다. 이 경우 Spring AOP 프록시를 거치지 않아 재시도 기능이 동작하지 않는 문제가 있었습니다.
3.  **책임 불분명**: `AIService`와 `AIChunkProcessor`가 AI 요약 전략 결정, 비동기 처리, 외부 API 통신 등 여러 책임을 동시에 수행하여 코드가 복잡하고 유지보수가 어려웠습니다.

### 개선 방안 (TO-BE)

1.  **Spring Retry 도입**: `spring-retry` 의존성을 추가하고 `@EnableRetry`를 활성화하여 일시적인 오류를 자동으로 재시도할 수 있는 기반을 마련했습니다.

2.  **`OpenAiClient` 컴포넌트 신설**:
    * OpenAI API와의 모든 통신 책임을 위임받는 `OpenAiClient` 클래스를 새로 생성했습니다.
    * 모든 API 호출 메서드(`getPartialSummary`, `getFinalSummaryFrom...`)에 `@Retryable` 어노테이션을 적용하여, 재시도 로직을 이 클래스에 집중시키고 중앙에서 관리하도록 했습니다.

3.  **서비스 계층 리팩토링 (SRP 적용)**:
    * `AIService`: 이제 '요약 전략 결정' 및 '전체 흐름 제어'라는 핵심 책임에만 집중합니다.
    * `AIChunkProcessor`: '부분 요약 작업의 비동기 실행' 책임만 담당합니다.
    * 두 클래스는 더 이상 `ChatClient`를 직접 사용하지 않고, 신설된 `OpenAiClient`를 통해 API를 호출하도록 변경하여 내부 호출 문제를 원천적으로 해결했습니다.

## 기대 효과

-   **시스템 안정성 향상 (Resilience)**: 일시적인 네트워크 오류를 최대 3회까지 자동으로 재시도하여 작업 성공률을 대폭 향상시킵니다.
-   **코드 품질 개선 (SRP)**: 각 클래스가 단일 책임을 갖도록 구조를 개선하여 코드의 가독성, 테스트 용이성, 유지보수성을 높였습니다.
-   **견고한 아키텍처**: 외부 API 연동부의 역할을 명확히 분리하여, 향후 다른 AI 모델을 추가하거나 API 관련 정책을 변경하기 용이한 유연한 구조를 확보했습니다.