@@ -4,7 +4,6 @@ import org.example.youtubeaisummary.dto.JobStatusDto;
 import org.example.youtubeaisummary.service.JobManager;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
@@ -19,24 +18,21 @@ public class AIService {
     private static final Logger logger = LoggerFactory.getLogger(AIService.class);
     private final JobManager jobManager;
     private final AIChunkProcessor chunkProcessor;
-    private final ChatClient chatClient;
-    private final PromptManager promptManager;
+    private final OpenAiClient openAiClient;
     @Value("${app.ai.strategy.optimal-chars:12000}")
     private int optimalChunkCharSize;
     @Value("${app.ai.strategy.max-chunks:4}")
     private int maxChunks;
 
-    public AIService(JobManager jobManager, AIChunkProcessor chunkProcessor, ChatClient chatClient, PromptManager promptManager) {
+    public AIService(JobManager jobManager, AIChunkProcessor chunkProcessor, OpenAiClient openAiClient) {
         this.jobManager = jobManager;
         this.chunkProcessor = chunkProcessor;
-        this.chatClient = chatClient;
-        this.promptManager = promptManager;
+        this.openAiClient = openAiClient;
     }
 
     @Async("aiTaskExecutor")
     public void summarize(String jobId, String subtitleText) {
         try {
-            // --- 3. '결정'과 '실행'으로 로직을 명확히 분리 ---
             SummarizationStrategy strategy = decideStrategy(subtitleText.length());
             String finalSummary = executeStrategy(jobId, subtitleText, strategy);
 
@@ -55,7 +51,7 @@ public class AIService {
      */
     private SummarizationStrategy decideStrategy(int totalChars) {
         if (totalChars <= optimalChunkCharSize) {
-            return new SummarizationStrategy(StrategyType.SINGLE_SHOT, totalChars);
+            return new SummarizationStrategy(StrategyType.SINGLE_SHOT, 0);
         }
 
         int potentialChunks = (int) Math.ceil((double) totalChars / optimalChunkCharSize);
@@ -76,14 +72,11 @@ public class AIService {
         return switch (strategy.type()) {
             case SINGLE_SHOT -> {
                 logger.info("작업 ID: {} - [전략 1] 단일 요청으로 정리합니다.", jobId);
-                yield getFinalSummary(jobId, text, true);
+                jobManager.updateJobProgress(jobId, JobStatusDto.JobStatus.AI_SUMMARIZING_FINAL, "최종 요약본을 생성 중입니다...");
+                yield openAiClient.getFinalSummaryFromTranscript(text);
             }
-            case OPTIMAL_MAP_REDUCE -> {
-                logger.info("작업 ID: {} - [전략 2] 최적 크기({}자) 청크로 분할합니다.", jobId, strategy.chunkSize());
-                yield executeMapReduce(jobId, text, strategy.chunkSize());
-            }
-            case FIXED_MAP_REDUCE -> {
-                logger.info("작업 ID: {} - [전략 3] 최대 청크 수({})에 맞춰 분할합니다.", jobId, maxChunks);
+            case OPTIMAL_MAP_REDUCE, FIXED_MAP_REDUCE -> {
+                logger.info("작업 ID: {} - [전략 2/3] Map-Reduce 방식으로 분할 처리합니다. (청크 사이즈: {})", jobId, strategy.chunkSize());
                 yield executeMapReduce(jobId, text, strategy.chunkSize());
             }
         };
@@ -96,20 +89,15 @@ public class AIService {
 
         jobManager.updateJobProgress(jobId, JobStatusDto.JobStatus.AI_SUMMARIZING_PARTIAL, "부분 요약들을 생성 중입니다...");
 
-        List<CompletableFuture<String>> partialSummaryFutures = chunks.stream().map(chunkProcessor::getPartialSummary).collect(Collectors.toList());
+        List<CompletableFuture<String>> partialSummaryFutures = chunks.stream().map(chunkProcessor::getPartialSummary).toList();
 
         CompletableFuture.allOf(partialSummaryFutures.toArray(new CompletableFuture[0])).join();
 
         String combinedSummaries = partialSummaryFutures.stream().map(CompletableFuture::join).collect(Collectors.joining("\n\n"));
 
-        return getFinalSummary(jobId, combinedSummaries, false);
+        return openAiClient.getFinalSummaryFromSummaries(combinedSummaries);
     }
 
-    private String getFinalSummary(String jobId, String content, boolean isFromTranscript) {
-        jobManager.updateJobProgress(jobId, JobStatusDto.JobStatus.AI_SUMMARIZING_FINAL, "최종 요약본을 생성 중입니다...");
-        String prompt = isFromTranscript ? promptManager.getFinalFromTranscriptPrompt(content) : promptManager.getFinalFromSummariesPrompt(content);
-        return chatClient.prompt().user(prompt).call().content();
-    }
 
     private List<String> splitTextByChars(String text, int chunkSize, int chunkOverlap) {
         List<String> chunks = new ArrayList<>();
